--- a/PY0101EN-1.3_notebook_quizz_String_Operations.ipynb
+++ b/PY0101EN-1.3_notebook_quizz_String_Operations.ipynb
@@ -16,12 +16,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCD'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Letters=\"ABCDEFGHIJK\"\n",
+    "Letters[0:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "Letters=\"ABCDEFGHIJK\""
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -43,7 +62,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Good=\"GsoAo+d\""
+    "Good=\"GsoAo+d\"\n",
+    "Good[]"
    ]
   },
   {
@@ -64,7 +84,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "jupyter": {
+     "outputs_hidden": false
+    }
    },
    "outputs": [],
    "source": [
@@ -82,9 +105,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-python-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -96,9 +119,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
